force-app/main/default/objects/Dummy19__c/Dummy19__c.object-meta.xml
<CustomObject>
    <label>Dummy19</label>
    <nameField>
        <label>Dummy19 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy19</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>