force-app/main/default/objects/Dummy19__c/fields/FooBar002__c.field-meta.xml
<CustomField>
    <fullName>FooBar002__c</fullName>
    <label>FooBar002</label>
    <length>255</length>
    <type>Text</type>
</CustomField>