force-app/main/default/objects/Dummy19__c/fields/FooBar006__c.field-meta.xml
<CustomField>
    <fullName>FooBar006__c</fullName>
    <label>FooBar006</label>
    <length>255</length>
    <type>Text</type>
</CustomField>