force-app/main/default/objects/Dummy19__c/fields/FooBar068__c.field-meta.xml
<CustomField>
    <fullName>FooBar068__c</fullName>
    <label>FooBar068</label>
    <length>255</length>
    <type>Text</type>
</CustomField>